# ML-manga109-OCR

./: .gitignore  Cargo.toml  README.md  Untitled0.ipynb  readme.Manga109s_released_2023_12_07.txt
Prototypes/manga109api/: Cargo.toml  README.md  annotations.xsd
Prototypes/manga109api/src/: lib.rs
Prototypes/opencv_dnn_test/: Cargo.toml
Prototypes/tesseract_textboxed/: Cargo.toml  README.md
Prototypes/tesseract_textboxed/src/: main.rs
training/: README.md
training/text_detection/: README.md  new-workspace.jupyterlab-workspace  text_detection.ipynb
training/text_detection/.ipynb_checkpoints/: text_detection-checkpoint.ipynb
training/text_detection/tools/convert_annotations_to_yolo/: Cargo.toml  README.md
training/text_detection/tools/convert_annotations_to_yolo/src/: main.rs
training/text_recognition/: README.md
