[package]
name = "manga109api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
quick-xml = { version = "0.31.0", features = ["serde", "serde-types", "serialize"] }
roxmltree = "0.19.0"
xmltree = "0.10.3"
